# cpp-draw

./: .gitignore  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: glad.c.5418E1C3B6AA04A1.idx  glad.h.8C7A7642FE788EA8.idx  glfw3.h.19133FFC91DE5F50.idx  glfwWindowCreation.cpp.27FB5325E1B2A80F.idx  glfwWindowCreation.h.53B07EE9FC446137.idx  khrplatform.h.5159611597CDDA60.idx  main.cpp.358A6235712EBF3B.idx
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: glfwWindowCreation.h  shaders.h
include/glad/: glad.h
src/: glad.c  glfwWindowCreation.cpp  main copy.cpp  main.cpp  shaders.cpp
